--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-use-websocket": "^4.4.0"
+    "react-spinners": "^0.13.8",
+    "react-use-websocket": "^4.4.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
