--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+# VITE_BASE_URL=https://twi-backend.ir/api
 VITE_BASE_URL=http://localhost:3000/api
-VITE_STATIC_FILES_URL=http://localhost:3000
+VITE_STATIC_FILES_URL=https://twi-backend.ir/
