--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-spinners": "^0.13.8",
     "react-use-websocket": "^4.4.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
