--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=https://twi-backend.vercel.app//api
-VITE_STATIC_FILES_URL=https://twi-backend.vercel.app
-# VITE_BASE_URL=http://localhost:443/api
-# VITE_STATIC_FILES_URL=http://localhost:443/
+# VITE_BASE_URL=https://twi-backend.vercel.app/api
+# VITE_STATIC_FILES_URL=https://twi-backend.vercel.app
+VITE_BASE_URL=http://localhost:4000/api
+VITE_STATIC_FILES_URL=http://localhost:4000/
